overflow fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -55,6 +55,7 @@ a span {
 
 /* CSS pour la page */
 body {
+    overflow: hidden;
     margin: 0;
     padding: 0;
     font-family: 'Montserrat';
